--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 	</div>
 
 	<div class="panel panel-default">
-	  <div class="panel-heading">New Package</div>
+	  <div class="panel-heading">BatteryPercentC</div>
 	  <div class="panel-body">
-		This is a sample package with lots of information.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.newpackage">More info</a>
+		BatteryPercentC.<br /><br />
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.BatteryPercentC">More info</a>
 	  </div>
 	</div>
 	<div class="container">
 	<div class="panel panel-default">
 	  <div class="panel-heading">TweakC</div>
 	  <div class="panel-body">
-		This is a sample package with minimal information.
+		This is a package with minimal information.
 		It also simulates an old package that's incompatible only with iOS lower than 7.0.<br /><br />
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.TweakC">More info</a>
 	  </div>
