--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 
 <div class="container">
-	<h1><img src="CydiaIcon.png"> Reposi3</h1>
+	<h1><img src="CydiaIcon.png"> Super Tweaks</h1>
 </div>
 
 <div class="container">
 	<div class="well">
-		<p><span class="text-primary"><b>Reposi3</span></b> is a Cydia repository template.</p>
-		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://supermamon.github.io/Reposi3/">Add to Cydia</a>
+		<p><span class="text-primary"><b>Super Tweaks</span></b> is a Cydia repository.</p>
+		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://supertweaks.github.io/repo2/">Add to Cydia</a>
 	</div>
 </div>
 
