--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
 <div class="container">
 	<div class="panel panel-default">
-	  <div class="panel-heading">Old Package</div>
+	  <div class="panel-heading">Dock</div>
 	  <div class="panel-body">
 		This is a sample package with minimal information.
 		It also simulates an old package that's incompatible only with iOS lower than 7.0.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.oldpackage">More info</a>
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.Dock">More info</a>
 	  </div>
 	</div>
 
