--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.TweakC">More info</a>
 	  </div>
 	</div>
+	
+		<div class="panel panel-default">
+	  <div class="panel-heading">Zebra</div>
+	  <div class="panel-body">
+		This is a package installer.
+		It also simulates an new package that's incompatible only with iOS older than 7.0.<br /><br />
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.Zebra">More info</a>
+	  </div>
+	</div>
+
 
 	
 <div class="container">
