--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 	</div>
 	<div class="container">
 	<div class="panel panel-default">
-	  <div class="panel-heading">TweakC</div>
+	  <div class="panel-heading">HomeGesture</div>
 	  <div class="panel-body">
 		This is a package with minimal information.
 		It also simulates an old package that's incompatible only with iOS lower than 7.0.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.TweakC">More info</a>
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.HomeGesture">More info</a>
 	  </div>
 	</div>
 	
