--- a/index.html
+++ b/index.html
@@ -52,13 +52,28 @@
 	</div>
 	
 		<div class="panel panel-default">
-	  <div class="panel-heading">Zebra</div>
+	  <div class="panel-heading">Newnowplaying</div>
 	  <div class="panel-body">
-		This is a package installer.
+		Music App.
 		It also simulates an new package that's incompatible only with iOS older than 7.0.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.Zebra">More info</a>
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.Newnowplaying">More info</a>
 	  </div>
 	</div>
+	
+			<div class="panel panel-default">
+	  <div class="panel-heading">Notchification</div>
+	  <div class="panel-body">
+		Want More With you Notch.
+		It also simulates an new package that's incompatible only with iOS older than 7.0.<br /><br />
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.Notchification">More info</a>
+	  </div>
+	</div>
+	
+	
+	
+	
+	
+	
 
 
 	
