Added cracked Support

--- a/index.html
+++ b/index.html
@@ -60,14 +60,6 @@
 	  </div>
 	</div>
 	
-			<div class="panel panel-default">
-	  <div class="panel-heading">Notchification</div>
-	  <div class="panel-body">
-		Want More With you Notch.
-		It also simulates an new package that's incompatible only with iOS older than 7.0.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.Notchification">More info</a>
-	  </div>
-	</div>
 	
 	
 	
@@ -78,7 +70,16 @@
 
 	
 <div class="container">
-  <h3 id="wells" class="page-header">Paided Packages</h3>
+  <h3 id="wells" class="page-header">Cracked Packages</h3>
+  	<div class="panel panel-default">
+	
+	  <div class="panel-heading">Notchification</div>
+	  <div class="panel-body">
+		Want More With you Notch.
+		It also simulates an new package that's incompatible only with iOS older than 7.0.<br /><br />
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.Notchification">More info</a>
+	  </div>
+	</div>
 </div>
 	
 </div>
