Added Games and DolphinIos

--- a/index.html
+++ b/index.html
@@ -80,6 +80,24 @@
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.Notchification">More info</a>
 	  </div>
 	</div>
+	
+	<div class="container">
+  <h3 id="wells" class="page-header">Games</h3>
+  	<div class="panel panel-default">
+	
+	  <div class="panel-heading">Dolphinios</div>
+	  <div class="panel-body">
+		Dolphinios will Let You Play Will on your iphone.
+		It also simulates an new package that's incompatible only with iOS older than 7.0.<br /><br />
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.supertweaks.Dolphinios">More info</a>
+	  </div>
+	</div>
+	
+	
+	
+	
+	
+	
 </div>
 	
 </div>
